Bug 24187 - Retail skin: text Enter weight is truncated on Add product dialog
Conflicts:
	HTML5/Web_ordering_app/index.html
	HTML5/Web_ordering_app/skins/retail/css/mainCSS.css

--- a/skins/retail/css/quantity.css
+++ b/skins/retail/css/quantity.css
@@ -18,8 +18,10 @@
     font-weight: bold;
     vertical-align: top;
     line-height: 28px;
-    width: 100px;
+    max-width: 150px;
+    min-width: 70px;
     display: inline-block;
+    text-align: right;
 }
 
 .quantity_select {
